add ruff formatting settings to pyproject.toml, and apply it to the codes

--- a/dev/spectral_density_fit_example.ipynb
+++ b/dev/spectral_density_fit_example.ipynb
@@ -7,10 +7,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%matplotlib inline\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "from qutip import *"
+        "from qutip import *\n",
+        "\n",
+        "%matplotlib inline"
       ]
     },
     {
@@ -31,17 +32,8 @@
       "outputs": [],
       "source": [
         "import numericalunits as nu\n",
-        "nu.Debye = 0.020819434*nu.e*nu.nm"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "19caa80e",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from spectral_density_fit import spectral_density_fitter"
+        "\n",
+        "nu.Debye = 0.020819434 * nu.e * nu.nm"
       ]
     },
     {
@@ -52,8 +44,20 @@
       "outputs": [],
       "source": [
         "import sys\n",
-        "sys.path.append('/share/apps/sphere_greens_function')\n",
+        "\n",
+        "sys.path.append(\"/share/apps/sphere_greens_function\")\n",
         "from calc_sphere_gf import calc_sphere_gf, DrudeAgDelga"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "19caa80e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# sys.path.append('..')\n",
+        "from spectral_density_fit import spectral_density_fitter"
       ]
     },
     {
@@ -71,8 +75,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\"input should be in numericalunits units\"\n",
-        "Jωprefac = lambda ω,μ: ω**2*μ**2/(np.pi*nu.hbar*nu.eps0*nu.c0**2)"
+        "def Jωprefac(ω, μ):\n",
+        "    \"input should be in numericalunits units\"\n",
+        "    return ω**2 * μ**2 / (np.pi * nu.hbar * nu.eps0 * nu.c0**2)"
       ]
     },
     {
@@ -82,11 +87,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\"input should be in numericalunits units\"\n",
-        "def sphere_Jω(R,ϵsphere,ϵbg,ħω,rsource,μ,nmax=70,**kwargs):\n",
-        "    GF = calc_sphere_gf(R/nu.nm,ϵbg,ħω/nu.eV,rsource/nu.nm,rsource/nu.nm,nmax=nmax,epssphere=ϵsphere,**kwargs)\n",
-        "    pref = Jωprefac(ħω/nu.ħ,μ)\n",
-        "    return pref * GF.imag.squeeze()/nu.m"
+        "def sphere_Jω(R, ϵsphere, ϵbg, ħω, rsource, μ, nmax=70, **kwargs):\n",
+        "    \"input should be in numericalunits units\"\n",
+        "    GF = calc_sphere_gf(R / nu.nm, ϵbg, ħω / nu.eV, rsource / nu.nm, rsource / nu.nm, nmax=nmax, epssphere=ϵsphere, **kwargs)\n",
+        "    pref = Jωprefac(ħω / nu.ħ, μ)\n",
+        "    return pref * GF.imag.squeeze() / nu.m"
       ]
     },
     {
@@ -96,9 +101,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "ωes = np.r_[3.3] # eV\n",
+        "ωes = np.r_[3.3]  # eV\n",
         "# use emitter with 15 Debye (quite large)\n",
-        "μes = np.r_[15]*nu.Debye # numericalunits units"
+        "μes = np.r_[15] * nu.Debye  # numericalunits units"
       ]
     },
     {
@@ -108,17 +113,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "R = 5.0 # nm\n",
+        "R = 5.0  # nm\n",
         "epsbg = 2.1\n",
-        "epssphere = DrudeAgDelga # Drude model for silver from Alex Delga PRL\n",
-        "rsource = np.array([[0,0,-R-1.]]); # nm\n",
-        "ω = np.linspace(0.5,7.5,701) # eV\n",
-        "Jω = sphere_Jω(R*nu.nm,epssphere,epsbg,ω*nu.eV,rsource*nu.nm,μes,nmax=50)\n",
-        "Jω = nu.hbar*Jω[2,2,:]/nu.eV # now in eV, and zz component\n",
+        "epssphere = DrudeAgDelga  # Drude model for silver from Alex Delga PRL\n",
+        "rsource = np.array([[0, 0, -R - 1.0]])  # nm\n",
+        "ω = np.linspace(0.5, 7.5, 701)  # eV\n",
+        "Jω = sphere_Jω(R * nu.nm, epssphere, epsbg, ω * nu.eV, rsource * nu.nm, μes, nmax=50)\n",
+        "Jω = nu.hbar * Jω[2, 2, :] / nu.eV  # now in eV, and zz component\n",
         "\n",
-        "plt.plot(ω,Jω)\n",
+        "plt.plot(ω, Jω)\n",
         "for ωe in ωes:\n",
-        "    plt.axvline(ωe,ls='--',color=\"C1\")\n",
+        "    plt.axvline(ωe, ls=\"--\", color=\"C1\")\n",
         "plt.xlabel(\"ω (eV)\")\n",
         "plt.ylabel(\"J(ω) (eV)\")\n",
         "plt.yscale(\"log\")\n",
@@ -145,21 +150,21 @@
         "# we have 1 emitter\n",
         "Ne = 1\n",
         "\n",
-        "H = np.diag([3.05,3.2,3.4,3.45])\n",
-        "κ = np.r_[0.1,0.1,0.12,0.13]\n",
-        "g = np.r_[0.03,0.04,0.1,0.1].reshape(1,Nm) # g has to be Ne x Nm array\n",
+        "H = np.diag([3.05, 3.2, 3.4, 3.45])\n",
+        "κ = np.r_[0.1, 0.1, 0.12, 0.13]\n",
+        "g = np.r_[0.03, 0.04, 0.1, 0.1].reshape(1, Nm)  # g has to be Ne x Nm array\n",
         "\n",
         "# make fitter object (is actually an nlopt object, with some functions added by spectral_density_fit)\n",
-        "opt = spectral_density_fitter(ω,Jω,Nm)\n",
+        "opt = spectral_density_fitter(ω, Jω, Nm)\n",
         "# get the 1d parameter array ps from initial guesses for H,κ,g\n",
-        "ps = opt.Hκg_to_ps(H,κ,g)\n",
+        "ps = opt.Hκg_to_ps(H, κ, g)\n",
         "# evaluate the model spectral density with those parameters\n",
         "# .squeeze() because Jfun returns [Ne,Ne,Nω] array also for Ne=1, squeeze removes dimensions of size 1\n",
         "# (i.e., transforms Jmod.shape from [1,1,len(ω)] -> [len(ω)])\n",
-        "Jmod = opt.Jfun(ω,ps).squeeze()\n",
+        "Jmod = opt.Jfun(ω, ps).squeeze()\n",
         "\n",
-        "plt.plot(ω,Jω,label='numerical')\n",
-        "plt.plot(ω,Jmod,label='guessed model')\n",
+        "plt.plot(ω, Jω, label=\"numerical\")\n",
+        "plt.plot(ω, Jmod, label=\"guessed model\")\n",
         "plt.xlabel(\"ω (eV)\")\n",
         "plt.ylabel(\"J(ω) (eV)\")\n",
         "plt.yscale(\"log\")\n",
@@ -170,15 +175,15 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "6893b15d",
+      "id": "f16fd66e-6ae3-4d0a-a73c-9046139e8161",
       "metadata": {},
       "outputs": [],
       "source": [
         "ps = opt.optimize(ps)\n",
-        "Jmod = opt.Jfun(ω,ps).squeeze()\n",
+        "Jmod = opt.Jfun(ω, ps).squeeze()\n",
         "\n",
-        "plt.plot(ω,Jω,label='numerical')\n",
-        "plt.plot(ω,Jmod,label='fitted model')\n",
+        "plt.plot(ω, Jω, label=\"numerical\")\n",
+        "plt.plot(ω, Jmod, label=\"fitted model\")\n",
         "plt.xlabel(\"ω (eV)\")\n",
         "plt.ylabel(\"J(ω) (eV)\")\n",
         "plt.yscale(\"log\")\n",
@@ -201,10 +206,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "tsfs = np.linspace(0,50,201)\n",
+        "tsfs = np.linspace(0, 50, 201)\n",
         "# since we have ħ=1 and energy units of eV, time units in mesolve are ħ/eV (~0.658 fs)\n",
         "# tsfs*nu.fs converts to \"internal\" numericalunits time unit, dividing by nu.ħ/nu.eV converts that to ħ/eV\n",
-        "ts = tsfs*nu.fs / (nu.ħ/nu.eV)"
+        "ts = tsfs * nu.fs / (nu.ħ / nu.eV)"
       ]
     },
     {
@@ -223,10 +228,10 @@
       "outputs": [],
       "source": [
         "dω = ω[1] - ω[0]\n",
-        "gdisc = np.sqrt(Jω*dω).reshape(1,-1)\n",
+        "gdisc = np.sqrt(Jω * dω).reshape(1, -1)\n",
         "# single-excitation subspace\n",
-        "H_disc = np.block([[np.diag(ω),gdisc.T],[gdisc,np.diag(ωes)]])\n",
-        "ψ0_disc = np.r_[np.zeros_like(ω),1.]"
+        "H_disc = np.block([[np.diag(ω), gdisc.T], [gdisc, np.diag(ωes)]])\n",
+        "ψ0_disc = np.r_[np.zeros_like(ω), 1.0]"
       ]
     },
     {
@@ -274,9 +279,9 @@
       "outputs": [],
       "source": [
         "# spectral_density_fitter uses jax, convert to normal numpy arrays for further use\n",
-        "ωij,κs,gαi = map(np.array,opt.ps_to_Hκg(ps))\n",
+        "ωij, κs, gαi = map(np.array, opt.ps_to_Hκg(ps))\n",
         "display(Qobj(ωij))\n",
-        "display(Qobj(κs.reshape(1,-1)))\n",
+        "display(Qobj(κs.reshape(1, -1)))\n",
         "display(Qobj(gαi))"
       ]
     },
@@ -288,7 +293,7 @@
       "outputs": [],
       "source": [
         "# make the H_sys matrix\n",
-        "Hsys = np.block([[ωij,gαi.T],[gαi,np.diag(ωes)]])\n",
+        "Hsys = np.block([[ωij, gαi.T], [gαi, np.diag(ωes)]])\n",
         "assert Qobj(Hsys).isherm"
       ]
     },
@@ -305,41 +310,34 @@
         "# Since the only restriction we want is in the total number of excitations,\n",
         "# we allow each individual photonic mode to have up to Nexc+1 states (i.e., 0 to Nexc photons),\n",
         "# while the emitters are two-level systems\n",
-        "part_dims = [Nexc+1]*Nm + [2]*Ne\n",
-        "print(\"Dimensions of quantum operators:\",part_dims)\n",
-        "print(\"Full Hilbert space would have size\",np.prod(part_dims))\n",
+        "part_dims = [Nexc + 1] * Nm + [2] * Ne\n",
+        "print(\"Dimensions of quantum operators:\", part_dims)\n",
+        "print(\"Full Hilbert space would have size\", np.prod(part_dims))\n",
         "\n",
         "# this creates a list of annihilation operators for subsystems with dimensions given by part_dims,\n",
         "# but only allowing up to Nexc excitations in the system\n",
-        "ann_ops = enr_destroy(part_dims,Nexc)\n",
+        "ann_ops = enr_destroy(part_dims, Nexc)\n",
         "# the first Nm operators are the photon mode operators a_i\n",
         "aops = ann_ops[:Nm]\n",
         "# the rest are the Ne emitter operators σ_α\n",
         "σs = ann_ops[Nm:]\n",
         "assert len(σs) == Ne\n",
-        "print(\"excitation-number restricted Hilbert space for up to\",Nexc,\"excitations has size\",σs[0].shape[0])"
+        "print(\"excitation-number restricted Hilbert space for up to\", Nexc, \"excitations has size\", σs[0].shape[0])"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "technological-citizenship",
+      "id": "82c4dcf1",
       "metadata": {},
       "outputs": [],
       "source": [
-        "# this \"weird\" construction ensures that we get 1D arrays of Qobjs \n",
-        "# (doing array(ann_ops) would give a 3d array where each Qobj is converted to a normal array\n",
-        "A  = np.zeros(len(ann_ops),dtype=Qobj)\n",
-        "Ad = np.zeros_like(A)\n",
-        "A[:]  = ann_ops\n",
-        "Ad[:] = [x.dag() for x in A]\n",
-        "\n",
-        "# since A and Ad are arrays, we can use the matrix multiplication operator\n",
-        "H = Ad @ Hsys @ A\n",
-        "# annihilation operators\n",
-        "c_ops = [np.sqrt(ka)*a for (ka,a) in zip(κs,aops)]\n",
+        "# Hamiltonian\n",
+        "H = sum(Hsys[i, j] * ann_ops[i].dag() * ann_ops[j] for i in range(len(ann_ops)) for j in range(len(ann_ops)))\n",
+        "# decay terms operators\n",
+        "c_ops = [np.sqrt(ka) * a for (ka, a) in zip(κs, aops)]\n",
         "# calculate, e.g., expected populations of all subsystems\n",
-        "e_ops = [x.dag()*x for x in ann_ops]"
+        "e_ops = [x.dag() * x for x in ann_ops]"
       ]
     },
     {
@@ -350,7 +348,7 @@
       "outputs": [],
       "source": [
         "# start with the emitter excited\n",
-        "ψ0 = enr_fock(part_dims,Nexc,np.r_[np.zeros(Nm),1])"
+        "ψ0 = enr_fock(part_dims, Nexc, np.r_[np.zeros(Nm), 1])"
       ]
     },
     {
@@ -370,11 +368,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "plt.plot(tsfs,sol.expect[-1],label=\"emitter\")\n",
-        "plt.plot(tsfs,[abs(ψ[-1].item())**2 for ψ in sol_disc.states],'--',label=\"emitter (direct discretization)\")\n",
+        "plt.plot(tsfs, sol.expect[-1], label=\"emitter\")\n",
+        "plt.plot(tsfs, [abs(ψ[-1].item()) ** 2 for ψ in sol_disc.states], \"--\", label=\"emitter (direct discretization)\")\n",
         "\n",
         "for ii in range(Nm):\n",
-        "    plt.plot(tsfs,sol.expect[ii],label=f\"photon mode {ii+1}\")\n",
+        "    plt.plot(tsfs, sol.expect[ii], label=f\"photon mode {ii + 1}\")\n",
         "plt.xlabel(\"t (fs)\")\n",
         "plt.ylabel(\"population\")\n",
         "plt.legend()\n",
@@ -383,10 +381,11 @@
     }
   ],
   "metadata": {
+    "hide_input": false,
     "kernelspec": {
-      "display_name": "node Py3 0 GPUs",
-      "language": "",
-      "name": "compute_node_python3_0gpu"
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -398,7 +397,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.11.6"
     }
   },
   "nbformat": 4,
