--- a/dev/spectral_density_fit_example_1.ipynb
+++ b/dev/spectral_density_fit_example_1.ipynb
@@ -33,13 +33,15 @@
       "outputs": [],
       "source": [
         "\"input should be in numericalunits units\"\n",
-        "Jωprefac = lambda ω,μ: ω**2*μ**2/(np.pi*nu.hbar*nu.eps0*nu.c0**2)\n",
+        "Jωprefac = lambda ω, μ: ω**2 * μ**2 / (np.pi * nu.hbar * nu.eps0 * nu.c0**2)\n",
         "\n",
         "\"input should be in numericalunits units\"\n",
-        "def free_space_Jω(ħω,μ):\n",
-        "    ω = ħω/nu.ħ\n",
-        "    GF_imag = ω/(6*np.pi*nu.c0)\n",
-        "    pref = Jωprefac(ω,μ)\n",
+        "\n",
+        "\n",
+        "def free_space_Jω(ħω, μ):\n",
+        "    ω = ħω / nu.ħ\n",
+        "    GF_imag = ω / (6 * np.pi * nu.c0)\n",
+        "    pref = Jωprefac(ω, μ)\n",
         "    return pref * GF_imag"
       ]
     },
@@ -59,11 +61,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "ws, P = np.loadtxt(\"Purcell_gap.dat\",unpack=True)\n",
-        "dw = ws[1]-ws[0]\n",
-        "J0 = free_space_Jω(ws*nu.eV, nu.e*nu.nm)\n",
+        "ws, P = np.loadtxt(\"Purcell_gap.dat\", unpack=True)\n",
+        "dw = ws[1] - ws[0]\n",
+        "J0 = free_space_Jω(ws * nu.eV, nu.e * nu.nm)\n",
         "Jw = nu.ħ * J0 * P / nu.eV\n",
-        "plt.plot(ws,Jw)\n",
+        "plt.plot(ws, Jw)\n",
         "plt.xlabel(\"ω (eV)\")\n",
         "plt.ylabel(\"J(ω) (eV)\");"
       ]
@@ -86,7 +88,7 @@
       "outputs": [],
       "source": [
         "# find \"most\" peaks (with some minimum width and prominence\n",
-        "peak_inds, peak_props = find_peaks(Jw,width=3,prominence=5e-4)\n",
+        "peak_inds, peak_props = find_peaks(Jw, width=3, prominence=5e-4)\n",
         "\n",
         "# number of modes\n",
         "Nm = len(peak_inds)\n",
@@ -98,23 +100,23 @@
         "# make fitter object (is actually an nlopt object, with some functions added by spectral_density_fit)\n",
         "# we set fitlog=True to fit the logarithm of the spectral density, not the spectral density itself\n",
         "# (this makes the fit more sensitive to small values)\n",
-        "opt = spectral_density_fitter(ws,Jw,Nm,fitlog=True)\n",
+        "opt = spectral_density_fitter(ws, Jw, Nm, fitlog=True)\n",
         "\n",
         "# start fit with a diagonal Hamiltonian, with parameters taken from those found by find_peaks\n",
         "H = np.diag(ws[peak_inds])\n",
         "kappas = dw * peak_props[\"widths\"]\n",
-        "gs = np.sqrt(np.pi*kappas*Jw[peak_inds]/2).reshape(1,Nm) # g has to be Ne x Nm array\n",
+        "gs = np.sqrt(np.pi * kappas * Jw[peak_inds] / 2).reshape(1, Nm)  # g has to be Ne x Nm array\n",
         "\n",
         "# \"ps\" is the 1d array of fit parameters, obtain it from initial guesses for H,κ,g\n",
-        "ps = opt.Hκg_to_ps(H,kappas,gs)\n",
+        "ps = opt.Hκg_to_ps(H, kappas, gs)\n",
         "# evaluate the model spectral density with those parameters\n",
         "# .squeeze() because Jfun returns [Ne,Ne,Nω] array also for Ne=1, squeeze removes dimensions of size 1\n",
         "# (i.e., transforms Jmod.shape from [1,1,len(ω)] -> [len(ω)])\n",
-        "Jmod = opt.Jfun(ws,ps).squeeze()\n",
+        "Jmod = opt.Jfun(ws, ps).squeeze()\n",
         "\n",
-        "plt.plot(ws,Jw,label='numerical')\n",
-        "plt.plot(ws[peak_inds],Jw[peak_inds],'o',label=\"identified peaks\")\n",
-        "plt.plot(ws,Jmod,label='guessed model')\n",
+        "plt.plot(ws, Jw, label=\"numerical\")\n",
+        "plt.plot(ws[peak_inds], Jw[peak_inds], \"o\", label=\"identified peaks\")\n",
+        "plt.plot(ws, Jmod, label=\"guessed model\")\n",
         "plt.xlabel(\"ω (eV)\")\n",
         "plt.ylabel(\"J(ω) (eV)\")\n",
         "plt.yscale(\"log\")\n",
@@ -140,7 +142,7 @@
         "# set the optimization tolerance\n",
         "opt.set_ftol_rel(1e-6)\n",
         "ps = opt.optimize(ps)\n",
-        "Jmod = opt.Jfun(ws,ps).squeeze()"
+        "Jmod = opt.Jfun(ws, ps).squeeze()"
       ]
     },
     {
@@ -150,8 +152,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "plt.plot(ws,Jw,label='numerical')\n",
-        "plt.plot(ws,Jmod,label='fitted model')\n",
+        "plt.plot(ws, Jw, label=\"numerical\")\n",
+        "plt.plot(ws, Jmod, label=\"fitted model\")\n",
         "plt.xlabel(\"ω (eV)\")\n",
         "plt.ylabel(\"J(ω) (eV)\")\n",
         "plt.yscale(\"log\")\n",
@@ -198,9 +200,9 @@
       "outputs": [],
       "source": [
         "# spectral_density_fitter uses jax, convert to normal numpy arrays for further use\n",
-        "H,kappas,gs = map(np.array,opt.ps_to_Hκg(ps))\n",
+        "H, kappas, gs = map(np.array, opt.ps_to_Hκg(ps))\n",
         "display(Qobj(H))\n",
-        "display(Qobj(kappas.reshape(1,-1)))\n",
+        "display(Qobj(kappas.reshape(1, -1)))\n",
         "display(Qobj(gs))"
       ]
     },
@@ -228,19 +230,19 @@
         "# Since the only restriction we want is in the total number of excitations,\n",
         "# we allow each individual photonic mode to have up to Nexc+1 states (i.e., 0 to Nexc photons),\n",
         "# while the emitters are two-level systems\n",
-        "part_dims = [Nexc+1]*Nm + [2]*Ne\n",
-        "print(\"Dimensions of quantum operators:\",part_dims)\n",
-        "print(\"Full Hilbert space would have size\",np.prod(part_dims))\n",
+        "part_dims = [Nexc + 1] * Nm + [2] * Ne\n",
+        "print(\"Dimensions of quantum operators:\", part_dims)\n",
+        "print(\"Full Hilbert space would have size\", np.prod(part_dims))\n",
         "\n",
         "# this creates a list of annihilation operators for subsystems with dimensions given by part_dims,\n",
         "# but only allowing up to Nexc excitations in the system\n",
-        "ann_ops = enr_destroy(part_dims,Nexc)\n",
+        "ann_ops = enr_destroy(part_dims, Nexc)\n",
         "# the first Nm operators are the photon mode operators a_i\n",
         "aops = ann_ops[:Nm]\n",
         "# the rest are the Ne emitter operators σ_α\n",
         "σs = ann_ops[Nm:]\n",
         "assert len(σs) == Ne\n",
-        "print(\"excitation-number restricted Hilbert space for up to\",Nexc,\"excitations has size\",σs[0].shape[0])"
+        "print(\"excitation-number restricted Hilbert space for up to\", Nexc, \"excitations has size\", σs[0].shape[0])"
       ]
     },
     {
@@ -251,13 +253,13 @@
       "outputs": [],
       "source": [
         "# since A and Ad are arrays, we can use the matrix multiplication operator\n",
-        "H = sum(H[i,j]*aops[i].dag()*aops[j] for i in range(Nm) for j in range(Nm)) + sum(we*σs[i].dag()*σs[i] for i in range(Ne))\n",
+        "H = sum(H[i, j] * aops[i].dag() * aops[j] for i in range(Nm) for j in range(Nm)) + sum(we * σs[i].dag() * σs[i] for i in range(Ne))\n",
         "# very important: always use normal ordering in excitation-number restricted subspace (i.e., creation operators on the left)\n",
-        "H += sum(gs[i,j]*(aops[j].dag()*σs[i] + σs[i].dag()*aops[j]) for i in range(Ne) for j in range(Nm))\n",
+        "H += sum(gs[i, j] * (aops[j].dag() * σs[i] + σs[i].dag() * aops[j]) for i in range(Ne) for j in range(Nm))\n",
         "# annihilation operators\n",
-        "c_ops = [np.sqrt(ka)*a for (ka,a) in zip(kappas,aops)]\n",
+        "c_ops = [np.sqrt(ka) * a for (ka, a) in zip(kappas, aops)]\n",
         "# calculate, e.g., expected populations of all subsystems\n",
-        "e_ops = [x.dag()*x for x in ann_ops]"
+        "e_ops = [x.dag() * x for x in ann_ops]"
       ]
     },
     {
@@ -268,12 +270,12 @@
       "outputs": [],
       "source": [
         "# start with the emitter excited\n",
-        "ψ0 = enr_fock(part_dims,Nexc,np.r_[np.zeros(Nm),1])\n",
+        "ψ0 = enr_fock(part_dims, Nexc, np.r_[np.zeros(Nm), 1])\n",
         "\n",
         "# tsfs is time in femtoseconds, for QuTiP we should use time units of ħ/eV (since ħ=1 and our energy units are eV)\n",
-        "tsfs = np.linspace(0,50,201)\n",
+        "tsfs = np.linspace(0, 50, 201)\n",
         "# tsfs*nu.fs converts to \"internal\" numericalunits time unit, dividing by nu.ħ/nu.eV converts that to ħ/eV\n",
-        "ts = tsfs*nu.fs / (nu.ħ/nu.eV)"
+        "ts = tsfs * nu.fs / (nu.ħ / nu.eV)"
       ]
     },
     {
@@ -293,9 +295,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "plt.plot(tsfs,sol.expect[-1],label=\"emitter\")\n",
+        "plt.plot(tsfs, sol.expect[-1], label=\"emitter\")\n",
         "for ii in range(Nm):\n",
-        "    plt.plot(tsfs,sol.expect[ii],label=f\"photon mode {ii+1}\")\n",
+        "    plt.plot(tsfs, sol.expect[ii], label=f\"photon mode {ii + 1}\")\n",
         "plt.xlabel(\"t (fs)\")\n",
         "plt.ylabel(\"population\")\n",
         "plt.legend(ncol=2);"
